{
  "sourceLanguage" : "en",
  "strings" : {
    "API_KEY_SUBTITLE" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Please copy and paste your API key into the box below."
          }
        }
      }
    },
    "API_KEY_TITLE" : {
      "comment" : "MARK: API Key",
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "OpenAI API Key"
          }
        }
      }
    },
    "ERROR_ALERT_CANCEL" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "OK"
          }
        }
      }
    },
    "ERROR_ALERT_TITLE" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Error"
          }
        }
      }
    },
    "FOG_LLM_LABEL" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Fog-based LLM"
          }
        }
      }
    },
    "FOG_MODEL_SAVE_ACTION" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Save Fog Model"
          }
        }
      }
    },
    "HEALTHKIT_PERMISSIONS_BUTTON" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Grant Access"
          }
        }
      }
    },
    "HEALTHKIT_PERMISSIONS_DESCRIPTION" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Supported data types include sleep, step count, active energy, exercise minutes, heart rate, and body mass. \n\n HealthKit data is fetched on demand when you ask questions, and sent to OpenAI for processing. \n\n Please refer to the OpenAI privacy policy for more information."
          }
        }
      }
    },
    "HEALTHKIT_PERMISSIONS_SUBTITLE" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "HealthGPT can access data from HealthKit to use in conversations with LLMs."
          }
        }
      }
    },
    "HEALTHKIT_PERMISSIONS_TITLE" : {
      "comment" : "MARK: HealthKit",
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "HealthKit Access"
          }
        }
      }
    },
    "INTERESTING_MODULES_AREA1_DESCRIPTION" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "HealthGPT is provided for general informational purposes only and is not intended as a substitute for professional medical advice, diagnosis, or treatment."
          }
        }
      }
    },
    "INTERESTING_MODULES_AREA1_TITLE" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Warning"
          }
        }
      }
    },
    "INTERESTING_MODULES_AREA2_DESCRIPTION" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Large language models, such as those provided by OpenAI, are known to hallucinate and at times return false information."
          }
        }
      }
    },
    "INTERESTING_MODULES_AREA2_TITLE" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Warning"
          }
        }
      }
    },
    "INTERESTING_MODULES_AREA3_DESCRIPTION" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "The use of HealthGPT is at your own risk. Always consult a qualified healthcare provider for personalized advice regarding your health and well-being."
          }
        }
      }
    },
    "INTERESTING_MODULES_AREA3_TITLE" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Warning"
          }
        }
      }
    },
    "INTERESTING_MODULES_AREA4_DESCRIPTION" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "This app is for demonstration only and should not be used to process any personal health information."
          }
        }
      }
    },
    "INTERESTING_MODULES_AREA4_TITLE" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Warning"
          }
        }
      }
    },
    "INTERESTING_MODULES_BUTTON" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "I Agree"
          }
        }
      }
    },
    "INTERESTING_MODULES_SUBTITLE" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "HealthGPT is an experimental iOS app that allows users to interact with health data stored in Apple Health using LLMs."
          }
        }
      }
    },
    "INTERESTING_MODULES_TITLE" : {
      "comment" : "MARK: Disclaimer",
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Disclaimer"
          }
        }
      }
    },
    "LLAMA3_DOWNLOAD_DESCRIPTION" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "The Llama3.2 3B model will be downloaded. Model size is around 3GB."
          }
        }
      }
    },
    "LLM Settings" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "LLM Settings"
          }
        }
      }
    },
    "LLM_SOURCE_PICKER_LABEL" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Choose an LLM source"
          }
        }
      }
    },
    "LLM_SOURCE_SELECTION_BUTTON" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Save Choice"
          }
        }
      }
    },
    "LLM_SOURCE_SELECTION_SUBTITLE" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Choose an on-device LLM, OpenAI LLM, or an LLM running on a fog node within your local network (setup required)."
          }
        }
      }
    },
    "LLM_SOURCE_SELECTION_TITLE" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "LLM Source Selection"
          }
        }
      }
    },
    "LOADING_CHAT_VIEW" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Initializing the LLM chat…"
          }
        }
      }
    },
    "LOCAL_LLM_LABEL" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "On-device LLM"
          }
        }
      }
    },
    "MODEL_SELECTION_SUBTITLE" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "If you have access to GPT4, you may select it below. Otherwise select GPT 3.5 Turbo."
          }
        }
      }
    },
    "MODEL_SELECTION_TITLE" : {
      "comment" : "MARK: Model Selection",
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Select an OpenAI Model"
          }
        }
      }
    },
    "OPEN_AI_MODEL_SAVE_ACTION" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Save OpenAI Model"
          }
        }
      }
    },
    "OPEN_SETTINGS" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Press to open the settings editor."
          }
        }
      }
    },
    "OPENAI_LLM_LABEL" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Remote OpenAI LLM"
          }
        }
      }
    },
    "RESET" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Reset"
          }
        }
      }
    },
    "Select Execution Type & Model" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Select Execution Type & Model"
          }
        }
      }
    },
    "SETTINGS_CHAT" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Chat Settings"
          }
        }
      }
    },
    "SETTINGS_CHAT_RESET" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Reset Chat"
          }
        }
      }
    },
    "SETTINGS_DISCLAIMER_TEXT" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "HealthGPT is powered by the OpenAI API. Data submitted here is not used for training OpenAI's models according to their terms and conditions. Currently, HealthGPT is accessing your step count, sleep analysis, exercise minutes, active calories burned, body weight, and heart rate, all from data stored in the Health app. Remember to log your data and wear your Apple Watch throughout the day for the most accurate results."
          }
        }
      }
    },
    "SETTINGS_DISCLAIMER_TITLE" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Disclaimer"
          }
        }
      }
    },
    "SETTINGS_DONE" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Done"
          }
        }
      }
    },
    "SETTINGS_SPEECH" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Speech Settings"
          }
        }
      }
    },
    "SETTINGS_SPEECH_TEXT_TO_SPEECH" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Enable Text to Speech"
          }
        }
      }
    },
    "SETTINGS_TITLE" : {
      "comment" : "MARK: Settings View",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Settings"
          }
        }
      }
    },
    "SPEAKER_DISABLED" : {
      "comment" : "MARK: HealthGPT View",
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Text to speech is disabled, press to enable text to speech."
          }
        }
      }
    },
    "SPEAKER_ENABLED" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Text to speech is enabled, press to disable text to speech."
          }
        }
      }
    },
    "WELCOME_AREA1_DESCRIPTION" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "HealthGPT is an experimental iOS app that allows users to query health data stored in Apple Health using LLMs."
          }
        }
      }
    },
    "WELCOME_AREA1_TITLE" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "HealthGPT"
          }
        }
      }
    },
    "WELCOME_AREA2_DESCRIPTION" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "HealthGPT can surface data from Apple Health to use in conversations with LLMs."
          }
        }
      }
    },
    "WELCOME_AREA2_TITLE" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Apple Health"
          }
        }
      }
    },
    "WELCOME_AREA3_DESCRIPTION" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "HealthGPT was built with the Spezi open-source digital health framework at Stanford University."
          }
        }
      }
    },
    "WELCOME_AREA3_TITLE" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "The Spezi Framework"
          }
        }
      }
    },
    "WELCOME_BUTTON" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Continue"
          }
        }
      }
    },
    "WELCOME_SUBTITLE" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "HealthGPT demonstrates how LLMs can change how we interact with digital health data."
          }
        }
      }
    },
    "WELCOME_TITLE" : {
      "comment" : "MARK: Welcome",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "HealthGPT"
          }
        }
      }
    }
  },
  "version" : "1.0"
}