...
    
    private var changeModelSettings: some View {
        Section("LLM Settings") {
            Button("Select Execution Type & Model") {
                self.path.append(customView: LLMSourceSelection())
            }
                .accessibilityIdentifier("changeModelButton")
        }
    }
    
    private var chatSettings: some View {
        Section("SETTINGS_CHAT") {
            Button("SETTINGS_CHAT_RESET") {
                Task {
                    await healthDataInterpreter.resetChat()
                    dismiss()
                }
            }
                .buttonStyle(PlainButtonStyle())
                .accessibilityIdentifier("resetButton")
        }
    }
    
    private var speechSettings: some View {
        Section("SETTINGS_SPEECH") {
            Toggle(isOn: $enableTextToSpeech) {
...
