...
"INTERESTING_MODULES_AREA3_TITLE" = "Contact";
"INTERESTING_MODULES_AREA3_DESCRIPTION" = "The contact module allows you to display contact information in your application.";

"INTERESTING_MODULES_AREA4_TITLE" = "HealthKit Data Source";
"INTERESTING_MODULES_AREA4_DESCRIPTION" = "The HealthKit data source module allows you to fetch data from HealthKit and e.g. transform it to FHIR resources.";

"INTERESTING_MODULES_BUTTON" = "Next";


// MARK: Consent
"CONSENT_TITLE" = "Consent Example";
"CONSENT_SUBTITLE" = "CardinalKit can collect consent from a user. You can provide the consent document using a markdown file.";

...
// MARK: Account
"ACCOUNT_TITLE" = "Your Account";
"ACCOUNT_SUBTITLE" = "The Template Application demonstrates the usage of the Firebase Account Module.";
"ACCOUNT_SETUP_DESCRIPTION" = "The login and sign up buttons use the Account Login and SignUp views.";
"ACCOUNT_SIGNED_IN_DESCRIPTION" = "You are successfully signed in with the following account:";
"ACCOUNT_NEXT" = "Next";
"ACCOUNT_SIGN_UP" = "Sign Up";
"ACCOUNT_LOGIN" = "Login";

"USER_VIEW_LOADING" = "Loading user information ...";

"LOGIN_TITLE" = "Login";
"LOGIN_SUBTITLE" = "The Template Application demonstrates the usage of the Firebase Account Module to enable different authentication services, including an email and password-based login.";
...
